[gd_scene load_steps=10 format=2]

[ext_resource path="res://Graphics/board.png" type="Texture" id=1]
[ext_resource path="res://Graphics/x.png" type="Texture" id=2]
[ext_resource path="res://Graphics/o.png" type="Texture" id=3]
[ext_resource path="res://scenes/tic_tac_toe.gd" type="Script" id=4]
[ext_resource path="res://Graphics/board_background.png" type="Texture" id=5]
[ext_resource path="res://font/Outline.ttf" type="DynamicFontData" id=6]

[sub_resource type="TileSet" id=1]
0/name = "o.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 128, 128 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "x.png 1"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 128, 128 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[sub_resource type="DynamicFont" id=2]
size = 50
use_mipmaps = true
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 100
font_data = ExtResource( 6 )

[node name="tic_tac_toe" type="Node2D"]
script = ExtResource( 4 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( -109, -109 )
anchor_mode = 0
current = true

[node name="Board" type="Node2D" parent="."]

[node name="BordoBoard" type="Sprite" parent="Board"]
position = Vector2( 191, 191 )
texture = ExtResource( 5 )

[node name="board" type="Sprite" parent="Board"]
scale = Vector2( 0.64, 0.64 )
texture = ExtResource( 1 )
centered = false

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 128, 128 )
format = 1

[node name="TileMapHover" type="TileMap" parent="."]
modulate = Color( 1, 1, 1, 0.498039 )
tile_set = SubResource( 1 )
cell_size = Vector2( 128, 128 )
format = 1

[node name="UI" type="Node2D" parent="."]

[node name="player_1" type="Label" parent="UI"]
margin_left = -16.0
margin_top = -77.0
margin_right = 128.0
margin_bottom = -16.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Player 1"
align = 1
valign = 1

[node name="player_2" type="Label" parent="UI"]
margin_left = 256.0
margin_top = -77.0
margin_right = 397.0
margin_bottom = -16.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Player 2"
align = 1
valign = 1

[node name="score" type="Label" parent="UI"]
margin_left = 128.0
margin_top = -77.0
margin_right = 256.0
margin_bottom = -16.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "0 - 0"
align = 1
valign = 1

[node name="game_over" type="Control" parent="UI"]
visible = false
margin_left = -109.0
margin_top = -109.0
margin_right = 491.0
margin_bottom = 491.0

[node name="background" type="ColorRect" parent="UI/game_over"]
margin_right = 600.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 0.784314 )

[node name="CenterContainer" type="CenterContainer" parent="UI/game_over"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -129.5
margin_top = -134.0
margin_right = 129.5
margin_bottom = 134.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/game_over/CenterContainer"]
margin_right = 259.0
margin_bottom = 268.0

[node name="risultato" type="Label" parent="UI/game_over/CenterContainer/VBoxContainer"]
margin_right = 259.0
margin_bottom = 177.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )
text = "Player 1
Ha vinto"
align = 1
valign = 1

[node name="game_over_score" type="Label" parent="UI/game_over/CenterContainer/VBoxContainer"]
margin_top = 181.0
margin_right = 259.0
margin_bottom = 268.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1

[node name="Buttons" type="Control" parent="UI"]
margin_right = 40.0
margin_bottom = 40.0

[node name="torna_al_menu" type="Button" parent="UI/Buttons"]
margin_left = -64.0
margin_top = 430.0
margin_right = 39.0
margin_bottom = 450.0
text = "Torna al men√π"

[node name="inizia_una_nuova_partita" type="Button" parent="UI/Buttons"]
margin_left = 50.0
margin_top = 430.0
margin_right = 153.0
margin_bottom = 450.0
text = "Inizia una nuova partita"

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="pressed" from="UI/Buttons/torna_al_menu" to="." method="_on_torna_al_menu_pressed"]
[connection signal="pressed" from="UI/Buttons/inizia_una_nuova_partita" to="." method="_on_inizia_una_nuova_partita_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
